--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,6 +1,5 @@
 @import "variables.scss";
 
-
 html {
     scroll-behavior: smooth;
 }
@@ -11,16 +10,8 @@ body {
     margin: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-}
-
-.section-black {
     background-color: $black;
     color: $white;
-}
-
-.section-white {
-    background-color: $white;
-    color: $black;
 }
 
 h1 {
@@ -36,7 +27,7 @@ h3 {
     @include third-heading;
 }
 
-#highlight {
+.highlight {
     @include highlight;
 }
 
@@ -44,8 +35,9 @@ p {
     font-size: 20px;
 }
 
-input, textarea {
-font-size: 16px;
+input,
+textarea {
+    font-size: 16px;
 }
 
 a {
@@ -54,6 +46,28 @@ a {
 
 main {
     padding-top: 100px;
+
+    a {
+        position: relative;
+        padding-bottom: 5px;
+
+        &::after {
+            content: "";
+            width: 100%;
+            height: 2px;
+            position: absolute;
+            left: 0;
+            bottom: 0px;
+            opacity: 0.3;
+        }
+
+        &:hover {
+            &:after {
+                opacity: 1;
+                transition: 300ms;
+            }
+        }
+    }
 }
 
 section {
@@ -85,22 +99,10 @@ section {
             margin-left: 50px;
 
             a {
-                color:$white;
+                color: $white;
             }
         }
     }
-}
-
-/* Back to top */
-
-#back-to-top {
-    position: fixed;
-    border: 2px solid $coral;
-    border-radius: 60px;
-    padding: 7px 11px;
-    bottom: 40px;
-    right: 100px;
-    transform: rotate(180deg);
 }
 
 /* Home */
@@ -129,11 +131,15 @@ section {
         &_resume {
             a {
                 color: $white;
+
+                &:after {
+                    background-color: $coral;
+                }
             }
         }
 
         &_discover {
-            margin-top: 60px;
+            margin-top: 100px;
             text-align: center;
 
             #highlight {
@@ -156,6 +162,63 @@ section {
     }
 }
 
+/* About */
+
+#about {
+    h3 {
+        margin-top: 60px;
+    }
+    .experiences {
+        &-container {
+            margin-top: 40px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+
+        &_item {
+            width: 30%;
+            min-width: 300px;
+            margin-bottom: 40px;
+
+            .highlight {
+                margin-bottom: 20px;
+            }
+
+            p{
+                margin: 0;
+            }
+        }
+    }
+
+    .skills {
+        &-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            grid-template-rows: repeat(10, 200px);
+            gap: 30px 30px;
+        }
+
+        &_item {
+      /*       width: 200px;
+            height: 200px; */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+            box-shadow: 5px 5px 30px rgba(0,0,0, 0.3);
+
+            p {
+                margin: 0;
+            }
+            
+            img {
+                max-height: 90px;
+            }
+        }
+    }
+}
+
 /* Contact */
 
 #contact {
@@ -168,9 +231,30 @@ section {
                 margin-left: 5px;
             }
         }
+
+        &_content {
+            display: flex;
+            justify-content: space-around;
+
+            a {
+                color: $white;
+
+                &::after {
+                    content: "";
+                    background-color: $green;
+                }
+            }
+        }
+
+        &_networks {
+            div {
+                display: flex;
+                justify-content: space-between;
+            }
+        }
     }
 
-    .contact_form {
+    /* .contact_form {
         label {
             @include highlight;
         }
@@ -222,5 +306,33 @@ section {
                 }
             }
         }
+    } */
+}
+
+/* Back to top */
+
+#back-to-top {
+    position: fixed;
+    border: 2px solid $coral;
+    border-radius: 60px;
+    padding: 7px 11px;
+    bottom: 40px;
+    right: 100px;
+    transform: rotate(180deg);
+}
+
+/* Footer */
+
+#footer {
+    background-color: $black;
+    text-align: center;
+    p {
+        font-size: 12px;
+        margin: 0;
+        padding: 40px 0;
+        color: #707070;
+    }
+    span {
+        color: $coral;
     }
 }
