--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -16,7 +16,6 @@ body {
 
 h1 {
     @include first-heading;
-    margin-top: 0;
 }
 
 h2 {
@@ -88,6 +87,8 @@ section {
     justify-content: space-between;
     align-items: center;
     height: 100px;
+    z-index: 1000;
+    /*   box-shadow: 0px 0px 30px rgba(0,0,0, 0.1); */
 
     nav ul {
         display: flex;
@@ -119,6 +120,20 @@ section {
                 font-size: 48px;
                 font-weight: 900;
                 font-family: "Raleway", sans-serif;
+            }
+
+            p:nth-child(2) {
+                position: relative;
+            }
+
+            &-detail {
+                position: absolute;
+                top: -20px;
+                left: 0;
+
+                object svg g path {
+                    stroke: red;
+                }
             }
 
             &-dot {
@@ -162,15 +177,69 @@ section {
     }
 }
 
+/* Works */
+
+.works {
+    &-container {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    &-card {
+        display: flex;
+        width: 490px;
+        flex-direction: column;
+        justify-content: flex-end;
+        margin-top: 40px;
+        width: 40%;
+        box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+
+        &_description {
+            padding: 40px;
+            background-color: #323231;
+        }
+
+        &_img {
+            margin: 0 auto;
+            display: block;
+            max-width: 100%;
+        }
+
+        &_category {
+            img {
+                margin-right: 10px;
+            }
+        }
+
+        p{
+            margin-top: 0;
+        }
+
+        a {
+            color: $white;
+
+            &::after {
+                content: "";
+                background-color: $yellow;
+            }
+        }
+    }
+}
+
 /* About */
 
 #about {
     h3 {
         margin-top: 60px;
+
+        img {
+            margin-right: 10px;
+        }
     }
     .experiences {
         &-container {
-            margin-top: 40px;
+            margin-top: 50px;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
@@ -185,7 +254,7 @@ section {
                 margin-bottom: 20px;
             }
 
-            p{
+            p {
                 margin: 0;
             }
         }
@@ -193,25 +262,32 @@ section {
 
     .skills {
         &-container {
+            margin-top: 50px;
+            /*    display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            column-gap: 30px;
+            row-gap: 30px; */
             display: grid;
+
             grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            grid-template-rows: repeat(10, 200px);
+            grid-auto-rows: 200px;
             gap: 30px 30px;
         }
 
         &_item {
-      /*       width: 200px;
+            /*     width: 200px;
             height: 200px; */
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: space-evenly;
-            box-shadow: 5px 5px 30px rgba(0,0,0, 0.3);
+            box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
 
             p {
                 margin: 0;
             }
-            
+
             img {
                 max-height: 90px;
             }
@@ -235,6 +311,7 @@ section {
         &_content {
             display: flex;
             justify-content: space-around;
+            margin-top: 60px;
 
             a {
                 color: $white;
