--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -18,6 +18,7 @@ $fontFamily : 'Montserrat', sans-serif;
     font-weight: 900;
     font-size:38px;
     font-family: 'Raleway', sans-serif;
+    margin-top: 10px;
 }
 
 @mixin subtitle {
@@ -40,7 +41,7 @@ $fontFamily : 'Montserrat', sans-serif;
 
 @mixin highlight {
     font-weight: 700;
-    font-size: 18px;
+    font-size: 20px;
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 2.5px;
