--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -109,6 +109,9 @@ section {
 /* Home */
 
 #home {
+   /*  ::selection, ::-moz-selection {
+        background: $coral;
+    } */
     .home {
         &_container {
             max-width: 50%;
@@ -194,10 +197,12 @@ section {
         margin-top: 40px;
         width: 40%;
         box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+        border-radius: 16px;
 
         &_description {
             padding: 40px;
             background-color: #323231;
+            border-radius: 16px;
         }
 
         &_img {
@@ -212,7 +217,7 @@ section {
             }
         }
 
-        p{
+        p {
             margin-top: 0;
         }
 
@@ -283,6 +288,7 @@ section {
             align-items: center;
             justify-content: space-evenly;
             box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+            border-radius: 16px;
 
             p {
                 margin: 0;
