--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,343 +1,353 @@
 @import "variables.scss";
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: $fontFamily;
-    font-weight: 400;
-    margin: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    background-color: $black;
-    color: $white;
+  font-family: $fontFamily;
+  font-weight: 400;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  background-color: $black;
+  color: $white;
 }
 
 h1 {
-    @include first-heading;
+  @include first-heading;
 }
 
 h2 {
-    @include second-heading;
+  @include second-heading;
 }
 
 h3 {
-    @include third-heading;
+  @include third-heading;
 }
 
 .highlight {
-    @include highlight;
+  @include highlight;
 }
 
 p {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 input,
 textarea {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 main {
-    padding-top: 100px;
+  padding-top: 100px;
 
-    a {
-        position: relative;
-        padding-bottom: 5px;
+  a {
+    position: relative;
+    padding-bottom: 5px;
 
-        &::after {
-            content: "";
-            width: 100%;
-            height: 2px;
-            position: absolute;
-            left: 0;
-            bottom: 0px;
-            opacity: 0.3;
-        }
-
-        &:hover {
-            &:after {
-                opacity: 1;
-                transition: 300ms;
-            }
-        }
+    &::after {
+      content: "";
+      width: 100%;
+      height: 2px;
+      position: absolute;
+      left: 0;
+      bottom: 0px;
+      opacity: 0.3;
     }
+
+    &:hover {
+      &:after {
+        opacity: 1;
+        transition: 300ms;
+      }
+    }
+  }
 }
 
 section {
-    padding: 40px 100px;
+  padding: 40px 100px;
 }
 
 /* Menu */
 
 #menu {
-    background-color: $black;
-    box-sizing: border-box;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    color: $white;
-    padding: 0px 100px;
+  background-color: $black;
+  box-sizing: border-box;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  color: $white;
+  padding: 0px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  z-index: 1000;
+  /*   box-shadow: 0px 0px 30px rgba(0,0,0, 0.1); */
+
+  nav ul {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    z-index: 1000;
-    /*   box-shadow: 0px 0px 30px rgba(0,0,0, 0.1); */
 
-    nav ul {
-        display: flex;
+    li {
+      list-style: none;
+      font-weight: 900;
+      font-size: 26px;
+      margin-left: 50px;
 
-        li {
-            list-style: none;
-            font-weight: 900;
-            font-size: 26px;
-            margin-left: 50px;
-
-            a {
-                color: $white;
-            }
-        }
+      a {
+        color: $white;
+      }
     }
+  }
 }
 
 /* Home */
 
 #home {
-   /*  ::selection, ::-moz-selection {
+  /*  ::selection, ::-moz-selection {
         background: $coral;
     } */
-    .home {
-        &_container {
-            max-width: 50%;
-            margin-left: 250px;
-        }
-
-        &_presentation {
-            p {
-                font-size: 48px;
-                font-weight: 900;
-                font-family: "Raleway", sans-serif;
-            }
-
-            p:nth-child(2) {
-                position: relative;
-            }
-
-            &-detail {
-                position: absolute;
-                top: -20px;
-                left: 0;
-
-                object svg g path {
-                    stroke: red;
-                }
-            }
-
-            &-dot {
-                color: $coral;
-                margin-left: 5px;
-                font-family: "Montserrat", sans-serif;
-            }
-        }
-
-        &_resume {
-            a {
-                color: $white;
-
-                &:after {
-                    background-color: $coral;
-                }
-            }
-        }
-
-        &_discover {
-            margin-top: 100px;
-            text-align: center;
-
-            #highlight {
-                font-size: 22px;
-            }
-
-            img {
-                animation: downarrow 0.6s infinite alternate ease-in-out;
-            }
-        }
-
-        @keyframes downarrow {
-            0% {
-                transform: translateY(0);
-            }
-            100% {
-                transform: translateY(0.4em);
-            }
-        }
+  .home {
+    &_container {
+      max-width: 50%;
+      margin-left: 250px;
     }
+
+    &_presentation {
+      p {
+        font-size: 48px;
+        font-weight: 900;
+        font-family: "Raleway", sans-serif;
+      }
+
+      p:nth-child(2) {
+        position: relative;
+      }
+
+      &-detail {
+        position: absolute;
+        top: -20px;
+        left: 0;
+
+        object svg g path {
+          stroke: red;
+        }
+      }
+
+      &-dot {
+        color: $coral;
+        margin-left: 5px;
+        font-family: "Montserrat", sans-serif;
+      }
+    }
+
+    &_resume {
+      a {
+        color: $white;
+
+        &:after {
+          background-color: $coral;
+        }
+      }
+    }
+
+    &_discover {
+      margin-top: 100px;
+      text-align: center;
+
+      #highlight {
+        font-size: 22px;
+      }
+
+      img {
+        animation: downarrow 0.6s infinite alternate ease-in-out;
+      }
+    }
+
+    @keyframes downarrow {
+      0% {
+        transform: translateY(0);
+      }
+      100% {
+        transform: translateY(0.4em);
+      }
+    }
+  }
 }
 
 /* Works */
 
 .works {
-    &-container {
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
+  &-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  &-card {
+    display: flex;
+    width: 490px;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-top: 40px;
+    width: 40%;
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+    border-radius: 16px;
+
+    &_description {
+      padding: 40px;
+      background-color: #323231;
+      border-radius: 16px;
     }
 
-    &-card {
-        display: flex;
-        width: 490px;
-        flex-direction: column;
-        justify-content: flex-end;
-        margin-top: 40px;
-        width: 40%;
-        box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
-        border-radius: 16px;
-
-        &_description {
-            padding: 40px;
-            background-color: #323231;
-            border-radius: 16px;
-        }
-
-        &_img {
-            margin: 0 auto;
-            display: block;
-            max-width: 100%;
-        }
-
-        &_category {
-            img {
-                margin-right: 10px;
-            }
-        }
-
-        p {
-            margin-top: 0;
-        }
-
-        a {
-            color: $white;
-
-            &::after {
-                content: "";
-                background-color: $yellow;
-            }
-        }
+    &_img {
+      margin: 0 auto;
+      display: block;
+      max-width: 100%;
     }
+
+    &_category {
+      img {
+        margin-right: 10px;
+      }
+    }
+
+    p {
+      margin-top: 0;
+    }
+
+    a {
+      color: $white;
+
+      &::after {
+        content: "";
+        background-color: $yellow;
+      }
+    }
+  }
+}
+
+/* Project */
+
+.project {
+
+  &-description {
+    line-height: 1.6em;
+    font-size: 22px;
+  }
 }
 
 /* About */
 
 #about {
-    h3 {
-        margin-top: 60px;
+  h3 {
+    margin-top: 60px;
 
-        img {
-            margin-right: 10px;
-        }
+    img {
+      margin-right: 10px;
     }
-    .experiences {
-        &-container {
-            margin-top: 50px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-
-        &_item {
-            width: 30%;
-            min-width: 300px;
-            margin-bottom: 40px;
-
-            .highlight {
-                margin-bottom: 20px;
-            }
-
-            p {
-                margin: 0;
-            }
-        }
+  }
+  .experiences {
+    &-container {
+      margin-top: 50px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
     }
 
-    .skills {
-        &-container {
-            margin-top: 50px;
-            /*    display: flex;
+    &_item {
+      width: 30%;
+      min-width: 300px;
+      margin-bottom: 40px;
+
+      .highlight {
+        margin-bottom: 20px;
+      }
+
+      p {
+        margin: 0;
+      }
+    }
+  }
+
+  .skills {
+    &-container {
+      margin-top: 50px;
+      /*    display: flex;
             justify-content: center;
             flex-wrap: wrap;
             column-gap: 30px;
             row-gap: 30px; */
-            display: grid;
+      display: grid;
 
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            grid-auto-rows: 200px;
-            gap: 30px 30px;
-        }
-
-        &_item {
-            /*     width: 200px;
-            height: 200px; */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-evenly;
-            box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
-            border-radius: 16px;
-
-            p {
-                margin: 0;
-            }
-
-            img {
-                max-height: 90px;
-            }
-        }
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-auto-rows: 200px;
+      gap: 30px 30px;
     }
+
+    &_item {
+      /*     width: 200px;
+            height: 200px; */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+      border-radius: 16px;
+
+      p {
+        margin: 0;
+      }
+
+      img {
+        max-height: 90px;
+      }
+    }
+  }
 }
 
 /* Contact */
 
 #contact {
-    .contact {
-        &_subtitle {
-            @include subtitle;
-            span {
-                font-family: "Montserrat", sans-serif;
-                color: $green;
-                margin-left: 5px;
-            }
-        }
-
-        &_content {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 60px;
-
-            a {
-                color: $white;
-
-                &::after {
-                    content: "";
-                    background-color: $green;
-                }
-            }
-        }
-
-        &_networks {
-            div {
-                display: flex;
-                justify-content: space-between;
-            }
-        }
+  .contact {
+    &_subtitle {
+      @include subtitle;
+      span {
+        font-family: "Montserrat", sans-serif;
+        color: $green;
+        margin-left: 5px;
+      }
     }
 
-    /* .contact_form {
+    &_content {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 60px;
+
+      a {
+        color: $white;
+
+        &::after {
+          content: "";
+          background-color: $green;
+        }
+      }
+    }
+
+    &_networks {
+      div {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+  }
+
+  /* .contact_form {
         label {
             @include highlight;
         }
@@ -395,27 +405,27 @@ section {
 /* Back to top */
 
 #back-to-top {
-    position: fixed;
-    border: 2px solid $coral;
-    border-radius: 60px;
-    padding: 7px 11px;
-    bottom: 40px;
-    right: 100px;
-    transform: rotate(180deg);
+  position: fixed;
+  border: 2px solid $coral;
+  border-radius: 60px;
+  padding: 7px 11px;
+  bottom: 40px;
+  right: 100px;
+  transform: rotate(180deg);
 }
 
 /* Footer */
 
 #footer {
-    background-color: $black;
-    text-align: center;
-    p {
-        font-size: 12px;
-        margin: 0;
-        padding: 40px 0;
-        color: #707070;
-    }
-    span {
-        color: $coral;
-    }
+  background-color: $black;
+  text-align: center;
+  p {
+    font-size: 12px;
+    margin: 0;
+    padding: 40px 0;
+    color: #707070;
+  }
+  span {
+    color: $coral;
+  }
 }
